# rds-snapshot-sanitizer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/sanitizer/: cli.py  faker.py  rds.py  settings.py  sql.py
