[project]
name = "rds-snapshot-sanitizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad Furqan Habibi", email = "furqan.habibi@hennge.com"},
]
requires-python = ">=3.13,<4.0"
dynamic = [ "dependencies" ]

[tool.poetry]
packages = [{include = "sanitizer", from = "src"}]
requires-poetry = ">=2.0"

[project.scripts]
sanitizer = "sanitizer.cli:main"

[tool.poetry.dependencies]
click = "^8.1"
boto3 = "^1.37"
psycopg = {version = "^3.2", extras = ["binary", "pool"]}
pydantic = "^2.10"
pydantic-settings = "^2.8"
Faker = "^37.0"
types-boto3 = {version = "^1.37", extras = ["rds", "ssm"]}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
